# mneva

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  install-verify.yml
docs/: alpha-onboarding.md  manual-smoke-m6.md  providers.md
src/mneva/: __init__.py  api.py  cli.py  config.py  indexer.py  paths.py  replay.py  store.py  synth.py
src/mneva/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py
src/mneva/templates/: claude-code.reference.md  codex.agents.md  cursor.rules.md
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py  test_cli_synthesize.py  test_e2e_cli.py  test_error_paths.py  test_http_api.py  test_replay_templates.py
tests/unit/: test_config.py  test_indexer.py  test_paths.py  test_provider_anthropic.py  test_provider_google.py  test_provider_openai.py  test_provider_openrouter.py  test_providers.py  test_smoke.py  test_store.py  test_synth.py
