[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneva"
version = "0.1.0a1"
description = "Persistent agent context substrate. Local-first CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Nick Chen", email = "mingxuanus@gmail.com" }]
keywords = ["ai", "agents", "context", "memory", "llm", "cross-tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1,<9",
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "python-frontmatter>=1.1,<2",
    "rank-bm25>=0.2.2,<0.3",
    "sqlite-vec>=0.1.6,<0.2",
    "httpx>=0.27,<0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-asyncio>=0.24,<0.30",
    "ruff>=0.7,<0.13",
    "mypy>=1.10,<2",
    "build>=1,<2",
    "twine>=5,<7",
]

[project.urls]
Homepage = "https://mneva.org"
Repository = "https://github.com/mneva-ai/mneva"
Issues = "https://github.com/mneva-ai/mneva/issues"

[project.scripts]
mneva = "mneva.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mneva"]
